--- a/client/src/styles/Layout.css
+++ b/client/src/styles/Layout.css
@@ -1,3 +1,5 @@
 .main-content{
-    padding-top: 100px !important;
+    padding: 0;
+    padding-top: 82px !important;
+    margin: 0 !important;
 }
