added navbar and main content styling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,16 @@
+@font-face {
+  font-family: "SeoulNamsanCB";  
+  src: url("./resources/SeoulNamsan-CB.ttf.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: "SeoulNamsanCB", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #1A2633 !important;
