--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -2,8 +2,24 @@
     color: var(--primary-text-color);
 }
 
-.home-p{
-    color: var(--secondary-text-color);
+/* Responsive Text */
+.home-title {
+    font-size: clamp(2.5rem, 5vw, 6rem) !important; 
+}
+
+.home-subtitle {
+    font-size: clamp(1.5rem, 3vw, 2rem) !important; 
+}
+
+.home-p {
+    margin-top: 4vh !important;
+    color: var(--secondary-text-color) !important;
+    font-size: clamp(1rem, 2vw, 1.5rem) !important;
+}
+
+.text-div{
+    margin-left: 4vw !important; 
+    margin-top: 10vh !important;
 }
 
 .home-page-content{
@@ -14,8 +30,15 @@
     height: 100vh;
     width: 100%;
 
-    background-image: url("../resources/blobs.png"); /* Ensure correct path */
+    flex-wrap: wrap !important;
+
+    background-image: url("../resources/blobs.png"); 
     background-size: contain;
-    background-position: right -100px center; /* Offset to the right */
+    background-position: right -100px center;
     background-repeat: no-repeat;
+}
+
+.erasmus-div{
+    margin-left: 2vw !important;
+    margin-top: 10vh !important;
 }
