--- a/client/src/styles/Variables.css
+++ b/client/src/styles/Variables.css
@@ -1,4 +1,6 @@
 :root{
     --primary-text-color: #D9EBFF;
     --secondary-text-color: #A3B7CC;
+    --background-color: #1A2633;
+    --secondary-background-color: #007BFF;
 }
