--- a/client/src/styles/Layout.css
+++ b/client/src/styles/Layout.css
@@ -1,9 +1,7 @@
 .main-content{
-    padding: 0;
+    padding: 0 !important;
     margin: 0 !important;
     width: 100 !important;
     max-width: 100vw !important;
-    padding: 0;
-    margin: 0 auto;
     overflow-x: hidden;
 }
