added partners page

--- a/client/src/styles/Variables.css
+++ b/client/src/styles/Variables.css
@@ -2,5 +2,8 @@
     --primary-text-color: #D9EBFF;
     --secondary-text-color: #A3B7CC;
     --background-color: #1A2633;
+    --card-background-color: #26384B;
+    --card-image-background-color: #ACC7E5;
     --secondary-background-color: #007BFF;
+    --partners-background-color: #869AB2;
 }
