--- a/client/src/styles/Variables.css
+++ b/client/src/styles/Variables.css
@@ -6,4 +6,5 @@
     --card-image-background-color: #ACC7E5;
     --secondary-background-color: #007BFF;
     --partners-background-color: #869AB2;
+    --gradient-starting-color: #003E80
 }
