added contact us page content

--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -10,11 +10,18 @@
 }
 
 /* BRAND LOGO */
-.nav-brand {
-    width: clamp(120px, 15vw, 243px); /* Scales between 120px and 243px */
-    height: auto; /* Keeps aspect ratio */
-    max-height: 72px; /* Ensures it doesn’t get too big */
+/*.navbar-brand {
+    width: clamp(120px, 15vw, 243px); 
+    height: auto; 
+    max-height: 72px; 
 }
+*/
+
+.navbar-brand img:hover {
+    cursor: pointer !important;
+}
+
+
 
 /* NAV LINKS */
 .nav-item {
