--- a/client/src/styles/Variables.css
+++ b/client/src/styles/Variables.css
@@ -6,5 +6,7 @@
     --card-image-background-color: #ACC7E5;
     --secondary-background-color: #007BFF;
     --partners-background-color: #869AB2;
-    --gradient-starting-color: #003E80
+    --gradient-starting-color: #003E80;
+    --modal-background-color: #D9D9D9;
+    --details-text-color: #667280;
 }
