--- a/client/src/styles/Partners.css
+++ b/client/src/styles/Partners.css
@@ -39,10 +39,13 @@
 .partner-cards{
     padding-top: 25vh !important;
     padding-bottom: 15vh !important;
+    padding-left: 37px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     background-color: var(--partners-background-color) !important;
+    gap: 50px;
+    width: 100%;
 }
 
 @media screen and (max-width: 768px) {
