--- a/client/src/styles/PartnerModal.css
+++ b/client/src/styles/PartnerModal.css
@@ -1,14 +1,14 @@
 .modal-content {
     border-radius: 20px !important;
     height: 90vh;
-    background-color: rgba(255, 255, 255, 0.85);
+    background-color: rgba(255, 255, 255, 0.85) !important;
 }
 
 .modal-header {
     display: flex;
     background-color: var(--card-background-color) !important;
     border-color: var(--modal-background-color);
-    border-radius: 20px;
+    border-radius: 20px !important;
     width: calc(100% - 10px); /* Subtract left + right margins */
     box-sizing: border-box;
     margin: 5px;
@@ -42,7 +42,6 @@
   margin-bottom: 0;
 }
 
-
 .modal-partner-details {
     display: grid;
     grid-template-columns: max-content 1fr;
@@ -63,19 +62,21 @@
     margin-top: 1rem;
     text-align: left;
     overflow-y: auto; /* allow scrolling if content overflows */
-    max-height: 60vh; /* limit height to prevent overflow */
+    max-height: 40vh; /* limit height to prevent overflow */
+    white-space: pre-line !important; /* preserve line breaks */
 }
 
 .modal-footer{
     display: flex;
     background-color: var(--card-background-color) !important;
     border-color: var(--modal-background-color);
-    border-radius: 20px;
+    border-radius: 20px !important;
     width: calc(100% - 10px); /* Subtract left + right margins */
     box-sizing: border-box;
     margin: 5px;
     height: 75px;
     transition: background-color 0.2s ease;
+    font-size: 1.2rem !important;
 }
 
 .modal-footer:hover{
@@ -83,12 +84,21 @@
     transition: background-color 0.2s ease;
 }
 
-.close-button, .close-button:hover {
+.close-button {
     color: white !important;
-    border: none;
-    font-size: 1.2rem;
+    border: none !important;
+    font-size: 1.2rem !important;
     width: 100%;
     height: 100%;
     background: none !important;
 }
+
+/* .close-button:hover {
+    color: white !important;
+    border: none !important;
+    font-size: 1.2rem;
+    width: 100%;
+    height: 100%;
+    background: none !important;
+} */
 
