added updates for responsiveness

--- a/client/src/styles/ObjectiveCard.css
+++ b/client/src/styles/ObjectiveCard.css
@@ -97,6 +97,10 @@
     .objective-title {
         font-size: 1.5rem; /* adjust font size for smaller screens */
     }
+
+    .objective-text {
+        font-size: 1.2rem; /* adjust font size for smaller screens */
+    }
     
 }
 
@@ -127,6 +131,10 @@
 
     .objective-title {
         font-size: 1.3rem; /* adjust font size for medium screens */
+    }
+
+    .objective-text {
+        font-size: 1.2rem; /* adjust font size for medium screens */
     }
     
 }
