--- a/client/src/styles/NewPartnerCard.css
+++ b/client/src/styles/NewPartnerCard.css
@@ -161,13 +161,13 @@
 }
 
 @media screen and (max-width: 768px) {
-    .specific-card {
+    /* .specific-card {
         flex-direction: column;
-        height: 360px; /* auto height to fit content */
-        width: 70vw; /* 90% of the screen width */
-        margin: 80px 0; /* vertical margin for spacing */
-        align-items: center; /* center align items */
-    }
+        height: 360px;
+        width: 70vw;
+        margin: 80px 0; 
+        align-items: center; 
+    } */
 
     .specific-circle-image-wrapper {
         top: -100px; /* moves it up above card body */
@@ -191,10 +191,27 @@
         min-height: 250px;
     }
     
-    .specific-title {
-        font-size: 1.5rem; /* adjust font size for smaller screens */
+    .new-partner-name {
+        font-size: 0.8rem; /* adjust font size for smaller screens */
+    }
+
+    .new-partner-contact-grid {
+        display: grid;
+        grid-template-rows: auto auto; /* 2 rows */
+        grid-template-columns: max-content 1fr auto; /* label, value, Learn More */
+        column-gap: 10px;
+        row-gap: 4px;
+        align-items: center;
+        font-size: 0.7rem;
+        color: var(--secondary-text-color);
     }
     
+    .new-partner-flag {
+        width: 20px;
+        height: 20px;
+        margin-left: 5px;
+    }
+
 }
 
 @media screen and (min-width: 769px) and (max-width: 1200px) {
@@ -227,8 +244,25 @@
         min-height: 250px;
     }
 
-    .specific-title {
-        font-size: 1.3rem; /* adjust font size for medium screens */
+    .new-partner-name {
+        font-size: 0.8rem; /* adjust font size for smaller screens */
     }
     
+    .new-partner-contact-grid {
+        display: grid;
+        grid-template-rows: auto auto; /* 2 rows */
+        grid-template-columns: max-content 1fr auto; /* label, value, Learn More */
+        column-gap: 10px;
+        row-gap: 4px;
+        align-items: center;
+        font-size: 0.7rem;
+        color: var(--secondary-text-color);
+    }
+    
+    .new-partner-flag {
+        width: 20px;
+        height: 20px;
+        margin-left: 5px;
+    }
+
 }
