--- a/client/src/styles/SpecificObjectiveCard.css
+++ b/client/src/styles/SpecificObjectiveCard.css
@@ -102,9 +102,14 @@
         font-size: 1.5rem; 
     }
     
+    .specific-text {
+        font-size: 1.2rem;
+        
+    }
+
 }
 
-/* @media screen and (min-width: 769px) and (max-width: 1200px) {
+@media screen and (min-width: 769px) and (max-width: 1200px) {
     .specific-card {
         width: 60vw; 
         height: 360px; 
@@ -138,4 +143,9 @@
         font-size: 1.3rem; 
     }
     
-} */
+    .specific-text {
+        font-size: 1.2rem;
+        
+    }
+
+}
